Implement actual benchmarking harness.